# Projects

./: README.md
ijml2202/codes/: READ.me
ijml2202/codes/adxc/: READ.me
ijml2202/codes/adxc/GDF2_VS/: CMakeLists.txt  READ.me  hz_sigma.data  hz_sigma_new.data  run.bat  run_nobound_10000.bat  run_power.bat  run_range_10000.bat  run_range_20000.bat  run_range_Ns.bat  run_sigma_10000.bat  run_test.bat
ijml2202/codes/adxc/GDF2_VS/GDF2_VS/: CMakeLists.txt  GDF2_VS.cpp  GDF2_VS.h  cprogram.cc  cprogram.h  doublestack.cc  doublestack.h  errorfunction.cc  errorfunction.h  fparser.cpp  gdfprogram.cpp  gdfprogram.h  get_options.cc  get_options.h  getopt.cpp  getopt.h  grammar.txt  grammar_inje.txt  grammar_nolog.txt  grammar_power.txt  multi_population.cc  multi_population.h  population.cc  population.h  program.cpp  program.h  rule.cc  rule.h  symbol.cc  udf.cc  udf.h  udf_grammar.txt
ijml2202/codes/python/: Bayesian_Dynesty_Restricted_LCDM_ga_20230915.py  H(z)_2203.10825.csv  READ.me  genetic_algorithm220515.py  genetic_algorithm230915.py  lcdm_series220515.py
